--- a/Blog/Blog/Views/Post/ViewPost.cshtml
+++ b/Blog/Blog/Views/Post/ViewPost.cshtml
@@ -8,5 +8,9 @@
 <div>@Model.PostContent</div>
 
 <div>@Model.Counter</div>
+<div>
+    @Html.Action("ShowAll", "Comments", @Model)
+</div>
+
 @Html.ActionLink("Back", "ListPosts", "Post")
  
