--- a/Blog/Blog/Views/Shared/_Comments.cshtml
+++ b/Blog/Blog/Views/Shared/_Comments.cshtml
@@ -1,5 +1,7 @@
 ﻿@model List<Blog.Models.CommentViewModel>
 
+@if (Request.IsAuthenticated)
+{
 <div class="panel panel-default">
     <div class="panel-body">
         <textarea id="commentContent" rows="5" class="form-control" style="min-width: 100%"></textarea>
@@ -9,15 +11,15 @@
         <a class="btn btn-info" role="button" onclick="insertComment()">Post Comment</a>
     </div>
 </div>
-
-@Html.HiddenFor(m => @Model[0].PostId);
+}
+@Html.HiddenFor(m => @Model[0].PostId)
 
 @for (int i = 0; i < @Model.Count; i++)
 {
    if (Model[i].CommentContent != null)
     {
     <div class="row">
-        <small>Posted by:</small> <strong>@Model[i].UserId</strong>, <small>Posted on:</small> @Model[i].DateComment
+        <small>Posted by:</small> <strong>@Model[i].PostedBy</strong>, <small>Posted on:</small> @Model[i].DateComment
         <div class="panel panel-default">
             <div class="panel-body">
                 <p>@Model[i].CommentContent</p>
